[gd_scene load_steps=5 format=2]

[ext_resource path="res://materials/StopLightMaterial.tres" type="Material" id=1]
[ext_resource path="res://signals/distant_signal/Signal.gd" type="Script" id=2]
[ext_resource path="res://materials/SignalMaterial.tres" type="Material" id=3]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0.411765, 0.411765, 0.411765, 1 )

[node name="Signal" type="CSGCombiner"]
script = ExtResource( 2 )

[node name="Pole" type="CSGBox" parent="."]
width = 0.125
depth = 0.125
material = SubResource( 1 )

[node name="SignalBox" type="CSGCombiner" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )

[node name="SignalBox" type="CSGBox" parent="SignalBox"]
width = 0.5
depth = 0.5
material = ExtResource( 3 )

[node name="AttentionLight" type="CSGSphere" parent="SignalBox"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.25, 0.75, 0 )
operation = 2
radius = 0.125
radial_segments = 8
rings = 8
material = ExtResource( 3 )

[node name="OmniLight" type="OmniLight" parent="SignalBox/AttentionLight"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.01, 0, 0 )
visible = false
light_color = Color( 1, 1, 0, 1 )
light_energy = 16.0
light_specular = 0.0
omni_range = 1.0

[node name="ProceedLight" type="CSGSphere" parent="SignalBox"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.25, 0.25, 0 )
operation = 2
radius = 0.125
radial_segments = 8
rings = 8
material = ExtResource( 3 )

[node name="OmniLight" type="OmniLight" parent="SignalBox/ProceedLight"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.01, 0, 0 )
visible = false
light_color = Color( 0, 1, 0, 1 )
light_energy = 16.0
light_specular = 0.0
omni_range = 1.0

[node name="CautionLight" type="CSGSphere" parent="SignalBox"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.25, -0.25, 0 )
operation = 2
radius = 0.125
radial_segments = 8
rings = 8
material = ExtResource( 3 )

[node name="OmniLight" type="OmniLight" parent="SignalBox/CautionLight"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.01, 0, 0 )
visible = false
light_color = Color( 1, 1, 0, 1 )
light_energy = 16.0
light_specular = 0.0
omni_range = 1.0

[node name="StopLight" type="CSGSphere" parent="SignalBox"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.25, -0.75, 0 )
operation = 2
radius = 0.125
radial_segments = 8
rings = 8
material = ExtResource( 1 )

[node name="OmniLight" type="OmniLight" parent="SignalBox/StopLight"]
light_color = Color( 1, 0, 0, 1 )
light_energy = 16.0
light_specular = 0.0
omni_range = 1.0
